@@ -158,7 +158,6 @@ MODULES = \
 ../Modules/read_namelists.o \
 ../Modules/read_uspp.o \
 ../Modules/recvec.o \
-../Modules/shmem_include.o \
 ../Modules/sic.o \
 ../Modules/smallbox.o \
 ../Modules/splinelib.o \
