@@ -104,9 +104,9 @@ MODULE io_files
   INTEGER :: iunbfgs     = 30 ! unit for the bfgs restart file
   INTEGER :: iunatsicwfc = 31 ! unit for sic wfc
   !
-  INTEGER :: nwordwfc    =  2 ! lenght of record in wavefunction file
-  INTEGER :: nwordatwfc  =  2 ! lenght of record in atomic wfc file
-  INTEGER :: nwordwann   =  2 ! lenght of record in sic wfc file
+  INTEGER :: nwordwfc    =  2 ! length of record in wavefunction file
+  INTEGER :: nwordatwfc  =  2 ! length of record in atomic wfc file
+  INTEGER :: nwordwann   =  2 ! length of record in sic wfc file
   !
   ! ... "path" specific
   !
