@@ -9,10 +9,6 @@
 MODULE mp_global
   !----------------------------------------------------------------------------
   !
-#if defined (__SHMEM)
-  USE shmem_include
-#endif
-  !
   USE parallel_include
   !
   IMPLICIT NONE 
