@@ -2026,7 +2026,7 @@ CONTAINS
       IMPLICIT NONE
       REAL(DP) :: blk( :, : )
       CHARACTER(LEN=1), INTENT(IN) :: dir      ! shift direction
-      INTEGER,          INTENT(IN) :: ln       ! shift lenght
+      INTEGER,          INTENT(IN) :: ln       ! shift length
       INTEGER,          INTENT(IN) :: tag      ! communication tag
       !
       INTEGER :: icdst, irdst, icsrc, irsrc, idest, isour
@@ -2333,7 +2333,7 @@ CONTAINS
       IMPLICIT NONE
       COMPLEX(DP) :: blk( :, : )
       CHARACTER(LEN=1), INTENT(IN) :: dir      ! shift direction
-      INTEGER,          INTENT(IN) :: ln       ! shift lenght
+      INTEGER,          INTENT(IN) :: ln       ! shift length
       INTEGER,          INTENT(IN) :: tag      ! communication tag
       !
       INTEGER :: icdst, irdst, icsrc, irsrc, idest, isour
